refactor(data): simplify data loaders and shift to raw data philosophy
- Removed RecordProcessor abstraction and integrated error recovery directly in CsvLoaderBase
- Reduced validation from multi-layer to structural-only (existence, parseability, encoding)
- Eliminated TextCleaningUtils and all specialized cleaning → loaders now return raw text (trim only)
- Cut DatasetLoadingStats from 15+ metrics to 4 essentials
- Simplified DataLoadingException and DatasetValidationUtils
- Reduced package size from ~3,500 LOC to ~1,500 LOC
- Maintained stable Dataset and DatasetLoader contracts

Why: Simplifies architecture, improves loading speed, and shifts responsibility for text cleaning/quality checks to downstream models.
Breaking change: Text cleaning and advanced validation no longer performed at loading stage.